--- a/style.css
+++ b/style.css
@@ -1224,16 +1224,17 @@ justify-content: space-evenly;
 #bt4 {
   align-items: center;
   
-    width: 10rem !important;
+    width: 100% !important;
   border-radius: 50%;
   background-color: transparent;
   border: 1px solid black;
   height: 10rem !important;
   font-size: 4rem !important;
+  margin-right: 1rem;
 }
 #bt5 {
     align-items: center;
-  width: 10rem !important;
+  width: 100% !important;
   border-radius: 50%;
   background-color: transparent;
   border: 1px solid black;
@@ -1348,13 +1349,13 @@ justify-content: center;
 .hh3 h3{
   font-size: 4rem !important;
   font-family: Arial, Helvetica, sans-serif;
-font-weight: lighter !important;
+font-weight: bold !important;
   color: rgb(14, 13, 13);
 
   
 }
 .em1-1{
-  width:500px!important;
+  width: 100%!important;
   padding: 2rem !important;
   margin-left: 1rem !important;
   justify-content: space-between !important;
@@ -2409,6 +2410,9 @@ grid-template-columns: repeat(auto-fit,minmax(600px,1fr)) !important;
 }
 
 
+.m1l2 iframe {
+  width: 400px;
+}
 
 
 
